--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "vue-js-modal": "^2.0.0-rc.6",
     "vue-router": "^3.3.4",
     "vue-screen-size": "^1.0.1",
+    "vue-sidebar-menu": "^4.7.3",
     "vuex": "^3.5.1",
     "vuex-persistedstate": "^3.0.1"
   },
