--- a/backend/config.example.yaml
+++ b/backend/config.example.yaml
@@ -1,6 +1,9 @@
 # Este é um exemplo de arquivo de configuração. Para utilizá-lo, configure as variáveis 
 # marcadas com o comentário # placeholder e renomeie o arquivo para config.yaml.
 
-alphavantage_api_key: API_KEY # placeholder
 ibm: IBM
 bovespa: BOVB11.SAO
+alphavantage_api_keys:
+  - API_KEY_1 # placeholder
+  - API_KEY_2 # placeholder
+  - API_KEY_3 # placeholder
