Redefinição dos modelos do BD - Melhorias nos modelos existentes - Adição de cotações Ibovespa em tabela separada

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -30,6 +30,8 @@ services:
     restart: always
     volumes:
       - ".:/backend"
+    ports:
+      - 5556:5556
     environment:
       - PYTHONUNBUFFERED=1
     depends_on:
