--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,8 @@
     "vue-screen-size": "^1.0.1",
     "vue-sidebar-menu": "^4.7.3",
     "vuex": "^3.5.1",
-    "vuex-persistedstate": "^3.0.1"
+    "vuex-persistedstate": "^3.0.1",
+    "zeromq": "^6.0.0-beta.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
