Configuração de websocket para roteamentos das cotações - Cotações são obtidas por um worker, publicados via ZeroMQ para o backend - Cotações são enviadas do backend ao navegador via websocket

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,7 @@
     "vue-screen-size": "^1.0.1",
     "vue-sidebar-menu": "^4.7.3",
     "vuex": "^3.5.1",
-    "vuex-persistedstate": "^3.0.1",
-    "zeromq": "^6.0.0-beta.6"
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
