--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -47,6 +47,8 @@ services:
       - ".:/backend"
     ports:
       - "8000:8000"
+    environment:
+      - PYTHONUNBUFFERED=1
     depends_on:
       - postgres
       - redis
