--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,15 +1,40 @@
-fastapi
-uvicorn
-websockets
-pysocks
-requests[socks]
-pyyaml
-sqlalchemy
-psycopg2
-alembic
-redis
-argh
-watchdog
-pyzmq
-torrequest
-pytest
+alembic==1.4.3
+argh==0.26.2
+attrs==20.2.0
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+fastapi==0.61.1
+h11==0.11.0
+idna==2.10
+importlib-metadata==2.0.0
+iniconfig==1.1.1
+Mako==1.1.3
+MarkupSafe==1.1.1
+packaging==20.4
+pathtools==0.1.2
+pluggy==0.13.1
+psycopg2==2.8.6
+py==1.9.0
+pydantic==1.6.1
+pyparsing==2.4.7
+PySocks==1.7.1
+pytest==6.1.1
+python-dateutil==2.8.1
+python-editor==1.0.4
+PyYAML==5.3.1
+pyzmq==19.0.2
+redis==3.5.3
+requests==2.24.0
+six==1.15.0
+SQLAlchemy==1.3.20
+starlette==0.13.6
+stem==1.8.0
+toml==0.10.1
+torrequest==0.1.0
+typing-extensions==3.7.4.3
+urllib3==1.25.11
+uvicorn==0.12.2
+watchdog==0.10.3
+websockets==8.1
+zipp==3.3.1
