--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -3,9 +3,10 @@ node_modules
 /dist
 
 # local env files
-.env
-.env.local
-.env.*.local
+# .env
+# .env.local
+# .env.*.local
+.env.production.local
 
 # Log files
 npm-debug.log*
